All app is translated to english as main language Fixed spacing around footer heart

--- a/src/app/components/footer/footer.component.css
+++ b/src/app/components/footer/footer.component.css
@@ -36,7 +36,7 @@
 
 .footer-heart {
   font-size: 1.15em;
-  margin: 0 0.1em;
+  margin: 0;
   display: flex;
   align-items: center;
   vertical-align: middle;
