--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -112,7 +112,7 @@ app-map {
   justify-content: center;
 }
 .home-panel-header mat-icon {
-  font-size: 2em;
+  font-size: 1.6em;
   min-width: 1.2em;
   min-height: 1.2em;
   display: flex;
@@ -122,7 +122,13 @@ app-map {
   margin-bottom: 0;
   margin-top: 0;
   position: relative;
-  top: 0.08em;
+  top: 0;
+}
+.home-panel-header h2 {
+  margin: 0;
+  font-size: 1.4em;
+  font-weight: 500;
+  display: inline-block;
 }
 .home-panel-content {
   margin-bottom: 0.5em;
